# workspace

./: .gitignore  AGENTS.md  Cargo.toml  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: rust-langgraph-ci.yml
agora/: Cargo.toml
agora/agora-protocol/: Cargo.toml
agora/agora-protocol/docs/: README.md  rust-api-design.md
agora/agora-protocol/src/: lib.rs  types.rs
agora/agora-server/: Cargo.toml
agora/agora-server/src/: main.rs
agora/agora/docs/: README.md  rust-api-design.md
agora/docs/: README.md  agent-communication.md  agent-messaging-abstraction.md  langgraph-agent-messaging-design.md  registration-discovery.md  scenario-assistant-email.md
agora/src/: main.rs
archive/rust-langgraph/: .rustfmt.toml  README.md
archive/rust-langgraph/crates/langgraph/: Cargo.toml
archive/rust-langgraph/crates/langgraph/examples/: chat_stream.rs  memory.rs
archive/rust-langgraph/crates/langgraph/src/: state.rs  supervisor.rs  traits.rs
archive/rust-langgraph/crates/langgraph/src/actor/: agent.rs  channel.rs  mod.rs
archive/rust-langgraph/crates/langgraph/src/agent/: echo.rs  mod.rs
archive/rust-langgraph/crates/langgraph/src/llm/: client.rs  mock.rs  openai.rs  types.rs
archive/rust-langgraph/crates/langgraph/src/memory/: embedder.rs
archive/rust-langgraph/crates/langgraph/src/tool/: compose.rs  file_ops.rs  http_request.rs  registry.rs  validation.rs
crates/workspace-api/: Cargo.toml
crates/workspace-api/src/: lib.rs  main.rs
docs/: langgraph-rust-add-edge-from-scheme.md  langgraph-rust-alignment.md  opencode-serve-api.md  workspace-api-architecture.md
docs/agent-protocols/: README.md  a2a.md  acp.md  anp.md  lacp.md  langchain-agent-protocol.md  mcp.md
docs/agora/: README.md  dev.md  spec.md
docs/assistant/: README.md  api.md  architecture.md  memory.md  personality.md
docs/bun/: README.md  compile-principle.md  decompile-tooling.md
docs/claude-code/: README.md  reverse-engineering.md
docs/crush/: README.md  skills.md
docs/cursor/: docker-dev.md
docs/deepagents/: 01-overview.md  02-architecture.md  03-backend-protocol.md  04-middleware-deep-dive.md  05-summarization-memory-skills.md  06-backend-implementation.md  07-design-decisions.md  README.md
docs/future/: auto-test-generation-agent-design.md  tech-direction-analysis-2026.md
docs/github-webhook/: README.md  dispatcher.md  event-handlers.md  handler.md  integration.md  metrics.md  models.md  security.md  testing.md
docs/ideas/: agora.md  assistant.md  opencode-rust-sdk.md
docs/langgraph-agent/: 01-concepts.md  02-chat-agent.md  03-react-agent.md  04-planning-agent.md  05-multi-agent.md  06-memory-agent.md  07-production.md  08-best-practices.md  09-memory-chat-case.md  10-memory-deep-dive.md  11-langchain-memory.md  12-context-compaction.md  README.md  (+1 more)
examples/chat-zhipu/: Cargo.toml  README.md
examples/chat-zhipu/src/: main.rs
mcp-impls/zoekt-mcp/: Cargo.toml  README.md
mcp-impls/zoekt-mcp/crates/mcp-server/: Cargo.toml
mcp-impls/zoekt-mcp/crates/mcp-server/src/: client.rs  config.rs  main.rs  tools.rs
opencode-sdk/: Cargo.toml  README.md
opencode-sdk/examples/: cli_fibonacci.rs  open.rs  parse_log.rs
opencode-sdk/src/: agent_skill.rs  api_log.rs  auth.rs  client.rs  command.rs  config.rs  error.rs  event.rs  experimental.rs  file.rs  find.rs  instance.rs  lib.rs  log.rs  lsp_mcp.rs  open.rs  path_vcs.rs  permission.rs  project.rs  project_directory.rs  provider.rs  pty.rs  question.rs  request.rs  session.rs  tui.rs
opencode-sdk/src/client/: builder.rs  mod.rs
opencode-sdk/src/event/: completion.rs  connect.rs  delta.rs  mod.rs
opencode-sdk/src/file/: mod.rs  types.rs
opencode-sdk/src/open/: chat.rs  health.rs  logging.rs  mod.rs  options.rs
opencode-sdk/src/server/: detect.rs  install.rs  mod.rs  runner.rs  shutdown.rs  spawn.rs
opencode-sdk/src/session/: diff.rs  message.rs  mod.rs  types.rs
opencode-sdk/tests/: common.rs  detect_test.rs
rust-langgraph/: .env.example  README.md  clippy.toml
rust-langgraph/crates/langgraph/: Cargo.toml
rust-langgraph/crates/langgraph-react/: Cargo.toml
rust-langgraph/crates/langgraph-react/src/: lib.rs
rust-langgraph/crates/langgraph/examples/: chat.rs  echo.rs  memory_checkpoint.rs  memory_persistence.rs  multi_agent.rs  react.rs  react_exa.rs  react_linear.rs  react_mcp.rs  react_mcp_gitlab.rs  react_zhipu.rs  state_graph_echo.rs  tools.rs
rust-langgraph/crates/langgraph/src/: error.rs  lib.rs  message.rs  state.rs  traits.rs
rust-langgraph/crates/langgraph/src/actor/: handler.rs  mod.rs  supervise.rs  types.rs
rust-langgraph/crates/langgraph/src/agent/: chat.rs  mod.rs
rust-langgraph/crates/langgraph/src/graph/: compile_error.rs  compiled.rs  mod.rs  next.rs  node.rs  state_graph.rs
rust-langgraph/crates/langgraph/src/llm/: README.md  error.rs  mock.rs  mod.rs  openai.rs  stream.rs  zhipu.rs
rust-langgraph/crates/langgraph/src/memory/: checkpoint.rs  checkpointer.rs  config.rs  embedder.rs  in_memory_store.rs  lance_store.rs  memory_saver.rs  mod.rs  serializer.rs  session.rs  sqlite_saver.rs  sqlite_store.rs  store.rs  vector.rs
rust-langgraph/crates/langgraph/src/react/: act_node.rs  mod.rs  observe_node.rs  think_node.rs
rust-langgraph/crates/langgraph/src/state/: mod.rs  react_state.rs
rust-langgraph/crates/langgraph/src/tool/: builtin.rs  mod.rs
rust-langgraph/crates/langgraph/src/tool_source/: mock.rs  mod.rs
rust-langgraph/crates/langgraph/src/tool_source/mcp/: mod.rs  session.rs
rust-langgraph/crates/langgraph/src/worker/: mod.rs
rust-langgraph/crates/langgraph/tests/: mcp_session.rs  mcp_tool_source.rs  memory.rs  memory_in_memory.rs  memory_lance.rs  memory_sqlite.rs  mock_llm.rs  mock_tool_source.rs  react_linear_chain.rs  react_nodes.rs  react_state.rs  state_graph.rs
scripts/: gen-opencode-api-docs.py
tools/role-gen/: .env.example  Cargo.toml  README.md  prompt.md
tools/role-gen/src/: check.rs  config.rs  expand.rs  lib.rs  main.rs  output.rs  state.rs
(+119 files in other folders)
