[package]
name = "agora-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Agora WebSocket server for Agent registration, discovery and message forwarding"

[[bin]]
name = "agora-server"
path = "src/main.rs"

[dependencies]
agora-protocol = { path = "../agora-protocol" }
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
