[workspace]
members = ["crates/mcp-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zoekt MCP Contributors"]
license = "MIT"

[workspace.dependencies]
mcp_core = { path = "../../crates/mcp-core" }
mcp_server = { path = "../../crates/mcp-server", features = ["axum", "websocket"] }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
