[package]
name = "langgraph-react"
version.workspace = true
edition.workspace = true
description = "ReAct (Reasoning + Acting) agent for langgraph (placeholder for S4)"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
langgraph = { path = "../langgraph" }
