[package]
name = "langgraph"
version.workspace = true
edition.workspace = true
description = "LangGraph-style minimal agents in Rust: state-in, state-out"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[example]]
name = "react_zhipu"
path = "examples/react_zhipu.rs"
required-features = ["zhipu"]

[[example]]
name = "react_mcp"
path = "examples/react_mcp.rs"
required-features = ["mcp"]

[[example]]
name = "react_mcp_gitlab"
path = "examples/react_mcp_gitlab.rs"
required-features = ["mcp"]

[[example]]
name = "react_exa"
path = "examples/react_exa.rs"
required-features = ["zhipu"]

[features]
default = ["mcp", "sqlite"]
mcp = ["dep:mcp_client", "dep:mcp_core"]
# 智谱 GLM（async-openai 兼容 API）
zhipu = ["dep:async-openai", "dep:dotenv"]
# Persistent checkpoint/store via SQLite (16-memory-design §3.6, §5.2.2)
sqlite = ["dep:rusqlite"]
# Persistent store with vector search via LanceDB (16-memory-design §5.2.1, long-term-memory-store P4)
lance = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: OpenAI-compatible API for LlmClient (enable with feature "zhipu"; used by ChatZhipu/ChatOpenAI).
async-openai = { version = "0.32", optional = true, features = ["chat-completion"] }
# Optional: load .env for examples (enable with feature "zhipu").
dotenv = { workspace = true, optional = true }
# Optional: MCP client for ToolSource (enable with feature "mcp").
mcp_client = { path = "../../../crates/mcp-client", optional = true }
mcp_core = { path = "../../../crates/mcp-core", optional = true }
# Optional: SQLite for persistent Checkpointer and Store (feature "sqlite").
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }
# Optional: LanceDB for persistent Store with vector search (feature "lance").
lancedb = { version = "0.23", optional = true }
arrow-array = { version = "56.2", optional = true }
arrow-schema = { version = "56.2", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
