[package]
name = "langgraph"
version.workspace = true
edition.workspace = true
description = "LangGraph-style agents and state machines in Rust"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# 启用后提供 OpenAiClient，需 reqwest（使用 rustls，不依赖系统 OpenSSL）
openai = ["dep:reqwest", "dep:tokio-stream"]
# 启用后 HttpRequestTool 可使用 ReqwestHttpFetcher 发真实 HTTP 请求
http = ["dep:reqwest"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"], optional = true }
tokio-stream = { version = "0.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
evalexpr = "13"
