[package]
name = "zoekt-mcp"
version = "0.1.0"
edition = "2021"
publish = false
description = "MCP server for Zoekt code search (stdio, SSE, WebSocket)"

[[bin]]
name = "zoekt-mcp"
path = "src/main.rs"

[dependencies]
mcp_core = { workspace = true }
mcp_server = { path = "../../../../crates/mcp-server", features = ["axum", "websocket"] }
tokio = { workspace = true }
axum = { version = "0.7", features = ["json"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json"] }
futures = { workspace = true }
clap = { workspace = true }
